Add todos and linting parameters

--- a/todo
+++ b/todo
@@ -13,3 +13,7 @@ ________________________________________________
 
 
 
+________________________________________________
+============ Other Things For Later ============
+  - Make page with legal/layman definitions for Privacy and Approval Status
+
